# bot-rs

./: Cargo.toml
src/: events.rs  main.rs  paginate.rs  shuttle.rs  traits.rs
src/audio/: sources.rs
src/commands/: admin.rs  games.rs  mod.rs  music.rs  others.rs
